--- a/UtH-Engine-0.9/vs2010/TestProject/TestProject.vcxproj.filters
+++ b/UtH-Engine-0.9/vs2010/TestProject/TestProject.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="source\TestScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Turret.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\TestScene.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\MoveAffector.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Turret.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
