Friday cleanup commit.

--- a/UtH-Engine-0.9/vs2010/TestProject/TestProject.vcxproj.filters
+++ b/UtH-Engine-0.9/vs2010/TestProject/TestProject.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="source\Turret.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\TestScene.hpp">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Turret.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
