--- a/UtH-Engine-0.9/vs2010/TestProject/TestProject.vcxproj
+++ b/UtH-Engine-0.9/vs2010/TestProject/TestProject.vcxproj
@@ -91,11 +91,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\TestScene.cpp" />
     <ClCompile Include="source\Turret.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="include\MoveAffector.hpp" />
     <ClInclude Include="include\TestScene.hpp" />
     <ClInclude Include="include\Turret.hpp" />
