Enemy class bases
Need heavy work

--- a/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj.filters
+++ b/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Turret.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TemplateScene.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Turret.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
