--- a/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj
+++ b/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj
@@ -82,11 +82,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TemplateScene.cpp" />
     <ClCompile Include="Turret.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Enemy.hpp" />
     <ClInclude Include="TemplateScene.hpp" />
     <ClInclude Include="Turret.hpp" />
   </ItemGroup>
