--- a/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj.filters
+++ b/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TemplateScene.hpp">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Enemy.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
