--- a/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj
+++ b/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TemplateScene.cpp" />
     <ClCompile Include="Turret.cpp" />
+    <ClCompile Include="TurretManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.hpp" />
@@ -97,6 +98,7 @@
     <ClInclude Include="EnemyManager.hpp" />
     <ClInclude Include="TemplateScene.hpp" />
     <ClInclude Include="Turret.hpp" />
+    <ClInclude Include="TurretManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
