--- a/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj.filters
+++ b/UtH-EngineVS2013/VS2013/TemplateProject/TemplateProject.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Bullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TurretManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TemplateScene.hpp">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Bullet.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TurretManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
