Code now very stable on Android, update incoming
Awaiting engine update, project cannot proceed until changes implemented
by the engine dev-team are in place. API-level changes will most likely
disrupt code structure momentarily.

--- a/UtH-Engine-master/vs2013/TestProject/TestProject.vcxproj.filters
+++ b/UtH-Engine-master/vs2013/TestProject/TestProject.vcxproj.filters
@@ -41,9 +41,6 @@
     <ClInclude Include="Bullet.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Button.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Button.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -57,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Turret.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
