--- a/UtH-Engine-master/vs2013/TestProject/TestProject.vcxproj.filters
+++ b/UtH-Engine-master/vs2013/TestProject/TestProject.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Turret.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TurretManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.hpp">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Scenes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TurretManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
