--- a/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj
+++ b/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="source\Enemy.cpp" />
     <ClCompile Include="source\EnemyManager.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\MenuScene.cpp" />
     <ClCompile Include="source\Player.cpp" />
     <ClCompile Include="source\TemplateScene.cpp" />
     <ClCompile Include="source\TestScene.cpp" />
@@ -111,6 +112,7 @@
     <ClInclude Include="include\Button.hpp" />
     <ClInclude Include="include\Enemy.hpp" />
     <ClInclude Include="include\EnemyManager.hpp" />
+    <ClInclude Include="include\MenuScene.hpp" />
     <ClInclude Include="include\MoveAffector.hpp" />
     <ClInclude Include="include\Player.hpp" />
     <ClInclude Include="include\Scenes.hpp" />
