--- a/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj.filters
+++ b/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="source\TurretManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Node.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\MoveAffector.hpp">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\TurretManager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Node.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
