--- a/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj
+++ b/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj
@@ -95,13 +95,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Node.cpp" />
     <ClCompile Include="source\Bullet.cpp" />
     <ClCompile Include="source\Button.cpp" />
     <ClCompile Include="source\Enemy.cpp" />
     <ClCompile Include="source\EnemyManager.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\MenuScene.cpp" />
+    <ClCompile Include="source\Node.cpp" />
     <ClCompile Include="source\Player.cpp" />
     <ClCompile Include="source\TemplateScene.cpp" />
     <ClCompile Include="source\TestScene.cpp" />
@@ -115,13 +115,13 @@
     <ClInclude Include="include\EnemyManager.hpp" />
     <ClInclude Include="include\MenuScene.hpp" />
     <ClInclude Include="include\MoveAffector.hpp" />
+    <ClInclude Include="include\Node.hpp" />
     <ClInclude Include="include\Player.hpp" />
     <ClInclude Include="include\Scenes.hpp" />
     <ClInclude Include="include\TemplateScene.hpp" />
     <ClInclude Include="include\TestScene.hpp" />
     <ClInclude Include="include\Turret.hpp" />
     <ClInclude Include="include\TurretManager.hpp" />
-    <ClInclude Include="Node.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
