Added new enemy

--- a/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj.filters
+++ b/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="source\Enemy_Asteroid_Small.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="source\Enemy_Asteroid_Cluster.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Bullet.hpp">
@@ -82,6 +85,9 @@
       <Filter>Include</Filter>
     </ClInclude>
     <ClInclude Include="include\Enemy_Asteroid_Small.hpp">
+      <Filter>Include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Enemy_Asteroid_Cluster.hpp">
       <Filter>Include</Filter>
     </ClInclude>
   </ItemGroup>
