--- a/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj.filters
+++ b/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj.filters
@@ -49,9 +49,6 @@
     <ClCompile Include="source\Turret_Missile.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="include\Turret_Lazer.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
     <ClCompile Include="source\Turret_Beam.cpp">
       <Filter>Source</Filter>
     </ClCompile>
@@ -59,6 +56,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="source\Turret_Mrk.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Turret_Lazer.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
