--- a/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj
+++ b/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="source\Turret_Lazer.cpp" />
     <ClCompile Include="source\Turret_Missile.cpp" />
     <ClCompile Include="source\Turret_Mrk.cpp" />
+    <ClCompile Include="source\Wave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Bullet.hpp" />
@@ -138,6 +139,7 @@
     <ClInclude Include="include\Turret_Cannon.hpp" />
     <ClInclude Include="include\Turret_Missile.hpp" />
     <ClInclude Include="include\Turret_Mrk.hpp" />
+    <ClInclude Include="include\Wave.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
