--- a/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj
+++ b/UtH-Engine-0.11/vs2013/TestProject/TestProject.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="source\Enemy_Asteroid_Cluster.cpp" />
     <ClCompile Include="source\Enemy_Asteroid_Small.cpp" />
     <ClCompile Include="source\Enemy_Pirate_Carrier.cpp" />
+    <ClCompile Include="source\Enemy_Pirate_CarrierMinion.cpp" />
     <ClCompile Include="source\Enemy_Pirate_Marauder.cpp" />
     <ClCompile Include="source\Enemy_Pirate_Scout.cpp" />
     <ClCompile Include="source\Enemy_Pirate_Striker.cpp" />
@@ -129,6 +130,7 @@
     <ClInclude Include="include\Enemy_Asteroid_Cluster.hpp" />
     <ClInclude Include="include\Enemy_Asteroid_Small.hpp" />
     <ClInclude Include="include\Enemy_Pirate_Carrier.hpp" />
+    <ClInclude Include="include\Enemy_Pirate_CarrierMinion.hpp" />
     <ClInclude Include="include\Enemy_Pirate_Marauder.hpp" />
     <ClInclude Include="include\Enemy_Pirate_Scout.hpp" />
     <ClInclude Include="include\Enemy_Pirate_Striker.hpp" />
